# arkanoid

./: .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  ball.cpp  ball.hpp  draw_utilities.cpp  draw_utilities.hpp  fmain.cpp  game_structs.hpp  gui.hpp  kirill.cpp  main.cpp  map.hpp  polina_main.cpp  vars.hpp
